--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,8 @@
    "outputs": [],
    "source": [
     "sentence = \"woW WE LOVE cOdInG and strINGS!\"\n",
-    "sentence # \"wow we love coding and strings!\""
+    "sentence # \"wow we love coding and strings!\"\n",
+    "sentence.capitalize()"
    ]
   },
   {
