--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,8 @@
    "outputs": [],
    "source": [
     "flatiron_mantra = \"learn. love. code.\"\n",
-    "flatiron_mantra # \"Learn. Love. Code.\""
+    "flatiron_mantra # \"Learn. Love. Code.\"\n",
+    "flatiron_mantra.title()"
    ]
   },
   {
