--- a/index.ipynb
+++ b/index.ipynb
@@ -96,23 +96,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1234"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "num_to_string = 1234\n",
-    "num_to_string"
+    "num_to_string = \"1234\""
    ]
   },
   {
