--- a/index.ipynb
+++ b/index.ipynb
@@ -96,12 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1234'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_to_string = 1234\n",
-    "num_to_string = \"1234\""
+    "num_to_string = \"1234\"\n",
+    "num_to_string"
    ]
   },
   {
