Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,7 @@
    ],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "new_name =  #Your code here; update the variable name. Should print Bart Flanders "
+    "new_name = name.replace(\"\") #Your code here; update the variable name. Should print Bart Flanders "
    ]
   },
   {
