--- a/index.ipynb
+++ b/index.ipynb
@@ -567,21 +567,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-1aa49ea36058>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-1aa49ea36058>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name = #Your code here; update the variable name. Should print Bart Flanders\u001b[0m\n\u001b[0m                                                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "new_name = name.replace(\"Simpson\") #Your code here; update the variable name. Should print Bart Flanders "
+    "new_name = name.replace(\"Simpson\", \"Flanders\") #Your code here; update the variable name. Should print Bart Flanders "
    ]
   },
   {
