Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,12 +567,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bart Flanders'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name = \"Bart Simpson\"\n",
-    "new_name = name.replace(\"Simpson\", \"Flanders\") #Your code here; update the variable name. Should print Bart Flanders "
+    "new_name = name.replace(\"Simpson\", \"Flanders\") #Your code here; update the variable name. Should print Bart Flanders \n",
+    "new_name"
    ]
   },
   {
